--- a/index.html
+++ b/index.html
@@ -108,8 +108,10 @@ BTW. You can leave these faded comments be, or delete them. They are but road si
 
 <div class="text-block" style="text-align: left">
   <h2>Policy</h2>
-
-    <h3>Now we need to address the question of policy: moving forward, what's your plan? Why are you and your solution right for the job? What can you/your product or service do specifically for the audience?</h3>
+    <h3>We are going to create accessible, easy-to-understand graphic pages including broad concepts in technology. Specifically, we will touch on the use of websites, apps, emails, 
+	and phone calls with visuals for our audience to understand. We believe having one place for the older population to know how to navigate certain aspects of technology would be a 
+	great solution to the problem. Since the older population is familiar with newspapers and printed material, our solution offers detailed visuals to help them see how to use different 
+	aspects step by step in a similar style.</h3>
     </div>
 
 
