--- a/index.html
+++ b/index.html
@@ -76,7 +76,19 @@ BTW. You can leave these faded comments be, or delete them. They are but road si
 <div class="text-block" style="text-align: left">
     <h2>Definition</h2>
 
-    <h3>Let's address some of questions of definition and better qualify your conjecture. Flesh it out. Get specific.</h3>
+    <h3>Our group will focus on four topics related to technology where senior citizens may struggle: website/browser navigation, software downloading/applications, emails, 
+	and mobile phone calls/texting. We will make 4 different infographics for each of the 4 aforementioned topics. There, we will make a step-by-step explanation on the basics of each 
+	topic, along with advice on how to navigate that technology safely to avoid scams and protect their information.</h3>
+
+
+	<h3>Morgan is the github manager, making sure all of the work we do gets added into the github, as well as keeping the github space as neat and organized as possible. 
+	Paige will be the content analyzer, ensuring that our language is both easy to understand and consistent throughout all of the topics. Nick is the designer, making sure the infographics look appealing. 
+	Finally, Blessing is our ethics and inclusion manager, crafting our group’s github guidelines so everyone participating gets equal opportunity to contribute.</h3>
+
+
+	<h3>To support further development, a well-structured project architecture would typically include a clear Github repository with a well-written  README file, a relevant license,  
+	detailed documentation explaining the codebase, a robust Q & A section for common questions, and a modular code structure that allows for easy additions and modifications to different 
+	components of the project.</h3>
 </div>
 
 
