--- a/index.html
+++ b/index.html
@@ -555,10 +555,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							</section>
 
 						<!-- Mini Posts -->
+						<!--
 							<section>
-								<div class="mini-posts">
+								<div class="mini-posts"> -->
 
 									<!-- Mini Post -->
+									<!--
 										<article class="mini-post">
 											<header>
 												<h3><a href="single.html">The Ethics of our Project</a></h3>
@@ -566,9 +568,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 												<a href="#" class="author"><img src="images/avatar.jpg" alt="" /></a>
 											</header>
 											<a href="single.html" class="image"><img src="images/pic04.jpg" alt="" /></a>
-										</article>
+										</article> -->
 
 									<!-- Mini Post -->
+									<!--
 										<article class="mini-post">
 											<header>
 												<h3><a href="single.html">Rutrum neque accumsan</a></h3>
@@ -577,8 +580,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											</header>
 											<a href="single.html" class="image"><img src="images/pic05.jpg" alt="" /></a>
 										</article>
+										-->
 
 									<!-- Mini Post -->
+									<!--
 										<article class="mini-post">
 											<header>
 												<h3><a href="single.html">Odio congue mattis</a></h3>
@@ -587,8 +592,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											</header>
 											<a href="single.html" class="image"><img src="images/pic06.jpg" alt="" /></a>
 										</article>
+										-->
 
 									<!-- Mini Post -->
+									<!--
 										<article class="mini-post">
 											<header>
 												<h3><a href="single.html">Enim nisl veroeros</a></h3>
@@ -596,12 +603,13 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 												<a href="#" class="author"><img src="images/avatar.jpg" alt="" /></a>
 											</header>
 											<a href="single.html" class="image"><img src="images/pic07.jpg" alt="" /></a>
-										</article>
+										</article> -->
 
-								</div>
-							</section>
+								<!--</div>
+							</section> -->
 
 						<!-- Posts List -->
+						<!--
 							<section>
 								<ul class="posts">
 									<li>
@@ -650,7 +658,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										</article>
 									</li>
 								</ul>
-							</section>
+							</section> -->
 
 						<!-- About -->
 							<section class="blurb">
