--- a/single.html
+++ b/single.html
@@ -9,7 +9,7 @@
 		<title>Ethics - Navigating Technology</title> <!-- by HTML5 UP -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/main.css" />
 	</head>
 	<body class="single is-preload">
 
