--- a/App.html
+++ b/App.html
@@ -9,7 +9,7 @@
 		<title>App - Navigating Technology</title> <!-- by HTML5 UP -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/main.css" />
+		<link rel="stylesheet" href="assets\css\main.css" />
 	</head>
 	<body class="single is-preload">
 
@@ -152,6 +152,27 @@
 										<li> App Location: Once downloaded, the app appears on your home screen or additional screens if your home screen is full. Swipe across to find it </li>
 									</ol>
 								</p>
+								<p> How to Check if an App is Safe to Download: </p>
+								<p> Most apps on the Play Store or App Store are safe, but some may look like popular apps to trick people </p>
+								<ul>
+									<li> Read Reviews and Ratings: Before downloading, check if the app has mostly positive reviews and high ratings. Avoid apps with many negative reviews or very few downloads </p>
+								</ul>
+								<p> How to Delete an App: </p>
+								<ol>
+									<li> Open the Play Store or App Store, find the app you want to remove, and tap ‘Uninstall’ or ‘Delete’ </li>
+								</ol>
+								<span class="image featured"><img src="images/deleteplay1.png" alt="" /></span>
+								<span class="image featured"><img src="images/deleteplay2.png" alt="" /></span>
+								<span class="image featured"><img src="images/deleteplay3.png" alt="" /></span>
+								<span class="image featured"><img src="images/deleteplay4.png" alt="" /></span>
+								<span class="image featured"><img src="images/deleteplay5.png" alt="" /></span>
+								<span class="image featured"><img src="images/deleteplay6.png" alt="" /></span>
+								<p> Common Troubleshooting Tips: </p>
+								<ol> 
+									<li> Can’t Find the Play Store/App Store: Look in your main menu or search in your apps. If you still don’t see it, try restarting your device </li>
+									<li> Low Storage Warning: If your device says there’s not enough storage, you may need to delete some unused apps or photos </li>
+								</ol>
+									
 										
 								<footer>
 									<ul class="stats">
